--- a/src/components/card/Default/style.module.css
+++ b/src/components/card/Default/style.module.css
@@ -6,8 +6,8 @@
   position: relative;
   background: rgba(0, 72, 115, 0.28);
   transition: all 0.5s;
-  border-radius: 10px;
-  padding: 5px 10px;
+  /* border-radius: 10px; */
+  /* padding: 5px 10px; */
   color: #fff;
 }
 
@@ -56,8 +56,8 @@
   width: 90%;
   height: 25px;
   position: relative;
-  top: 0;
-  left: 0;
+  top: 10px;
+  left: 10px;
   color: white;
   padding-left: 10px;
   line-height: 25px;
@@ -72,5 +72,15 @@
   content: '';
   background: #59ebe8;
   border-radius: 10px;
-  left: 0;
+  left: 0px;
+}
+
+.content {
+  width: 100%;
+  height: calc(100% - 30px);
+}
+
+.contentHeadless {
+  width: 100%;
+  height: 100%;
 }
